Converted to kotlin

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
-        android:text="Number:"
+        android:text="@string/TVnumberQuestionText"
         android:textColor="@color/colorBlack"
         android:textSize="50sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="0/0"
+        android:text="@string/TVnumberCorrectScore"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/TVnumberLeft"
         app:layout_constraintHorizontal_bias="0.5"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Num left: 0"
+        android:text="@string/TVnumberLeftText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -78,7 +78,7 @@
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/minTitle"
+        android:id="@+id/maxTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -87,19 +87,19 @@
         app:layout_constraintBottom_toTopOf="@+id/maxPicker"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/maxTitle"
+        app:layout_constraintStart_toEndOf="@+id/minTitle"
         app:layout_constraintTop_toBottomOf="@+id/TVnumberCorrect"
         app:layout_constraintVertical_bias="0.903" />
 
     <TextView
-        android:id="@+id/maxTitle"
+        android:id="@+id/minTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Min"
+        android:text="@string/maxTitleText"
         app:layout_constraintBottom_toTopOf="@+id/minPicker"
-        app:layout_constraintEnd_toStartOf="@+id/minTitle"
+        app:layout_constraintEnd_toStartOf="@+id/maxTitle"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TVnumberLeft"
@@ -129,9 +129,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Reset Game"
+        android:text="@string/resetGameText"
         android:onClick="resetGame"
-        app:layout_constraintBottom_toTopOf="@+id/minTitle"
+        app:layout_constraintBottom_toTopOf="@+id/maxTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TVnumberLeft" />
