--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,65 +61,14 @@
         <requestFocus />
     </EditText>
 
-    <NumberPicker
-        android:id="@+id/maxPicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:descendantFocusability="blocksDescendants"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/minPicker"
-        app:layout_constraintTop_toBottomOf="@+id/TVnumberLeft"
-        app:layout_constraintVertical_bias="0.972"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/maxTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Max"
-        app:layout_constraintBottom_toTopOf="@+id/maxPicker"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/minTitle"
-        app:layout_constraintTop_toBottomOf="@+id/TVnumberCorrect"
-        app:layout_constraintVertical_bias="0.903" />
-
     <TextView
         android:id="@+id/minTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:text="@string/maxTitleText"
-        app:layout_constraintBottom_toTopOf="@+id/minPicker"
-        app:layout_constraintEnd_toStartOf="@+id/maxTitle"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TVnumberLeft"
-        app:layout_constraintVertical_bias="0.903" />
-
-    <NumberPicker
-        android:id="@+id/minPicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:descendantFocusability="blocksDescendants"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/maxPicker"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TVnumberLeft"
-        app:layout_constraintVertical_bias="0.972"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toBottomOf="@+id/TVnumberLeft" />
 
     <Button
         android:id="@+id/resetGame"
@@ -128,12 +77,30 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/resetGameText"
         android:onClick="resetGame"
-        app:layout_constraintBottom_toTopOf="@+id/maxTitle"
+        android:text="@string/resetGameText"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TVnumberLeft" />
+        app:layout_constraintTop_toBottomOf="@+id/TVnumberLeft"
+        app:layout_constraintVertical_bias="0.318" />
+
+    <Button
+        android:id="@+id/selectNumbersBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/select_numbers"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resetGame" />
+
+    <Button
+        android:id="@+id/statsBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/stats"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selectNumbersBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
