--- a/app/src/main/res/layout/text_view_stats.xml
+++ b/app/src/main/res/layout/text_view_stats.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/textView"
+    android:layout_height="wrap_content">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        >
+        <TextView
+            android:id="@+id/textViewPair"
+            android:textSize="40sp"
+            android:textColor="@color/colorBlack"
+            android:layout_margin="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/_20x20" />
+
+        <TextView
+            android:id="@+id/textViewScore"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:gravity="right"
+            android:textAlignment="gravity"
+            android:text="@string/_50"
+            android:textColor="@color/colorBlack"
+            android:textSize="40sp"/>
+
+    </LinearLayout>
 </LinearLayout>
