--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.ToggleButton" parent="Base.Widget.AppCompat.Button">
+        <item name="colorAccent">@color/colorRed</item>
+        <item name="android:colorControlActivated">@color/colorGreen</item>
+        <item name="android:colorFocusedHighlight">@color/colorGreen</item>
+
+    </style>
+
 </resources>
