--- a/app/src/debug/res/layout/activity_number_select.xml
+++ b/app/src/debug/res/layout/activity_number_select.xml
@@ -23,22 +23,21 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:layout_margin="8dp"
+        android:layout_marginBottom="16dp"
         android:onClick="save"
+        android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:text="Toggle settings"
         android:onClick="toggleSettings"
+        android:text="Toggle settings"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
